Motif_Athena_Package/include_C/Xlib.h

typedef char *XPointer;
typedef struct _XExtData {
	int number;		
	struct _XExtData *next;	
	int (*free_private)(	
	struct _XExtData *extension
	);
	XPointer private_data;	
} XExtData;
typedef struct {
    int depth;
    int bits_per_pixel;
    int scanline_pad;
} XPixmapFormatValues;
typedef struct {
	int function;		
	unsigned long plane_mask;
	unsigned long foreground;
	unsigned long background;
	int line_width;		
	int line_style;	 	
	int cap_style;	  	
	int join_style;	 	
	int fill_style;	 	
	int fill_rule;	  	
	int arc_mode;		
	Pixmap tile;		
	Pixmap stipple;		
	int ts_x_origin;	
	int ts_y_origin;
        Font font;	        
	int subwindow_mode;     
	Bool graphics_exposures;
	int clip_x_origin;	
	int clip_y_origin;
	Pixmap clip_mask;	
	int dash_offset;	
	char dashes;
} XGCValues;
typedef struct {
	XExtData *ext_data;	
	struct _XDisplay *display;
	Window root;		
	int width, height;	
	int mwidth, mheight;	
	int ndepths;		
	Depth *depths;		
	int root_depth;		
	Visual *root_visual;	
	GC default_gc;		
	Colormap cmap;		
	unsigned long white_pixel;
	unsigned long black_pixel;	
	int max_maps, min_maps;	
	int backing_store;	
	Bool save_unders;
	long root_input_mask;	
} Screen;
typedef struct {
    Pixmap background_pixmap;	
    unsigned long background_pixel;	
    Pixmap border_pixmap;	
    unsigned long border_pixel;	
    int bit_gravity;		
    int win_gravity;		
    int backing_store;		
    unsigned long backing_planes;
    unsigned long backing_pixel;
    Bool save_under;		
    long event_mask;		
    long do_not_propagate_mask;	
    Bool override_redirect;	
    Colormap colormap;		
    Cursor cursor;		
} XSetWindowAttributes;
typedef struct {
	int family;		
	int length;		
	char *address;		
} XHostAddress;
typedef struct {
    int x, y;
    int width, height;
    int border_width;
    Window sibling;
    int stack_mode;
} XWindowChanges;
typedef struct {
	unsigned long pixel;
	unsigned short red, green, blue;
	char flags;  
	char pad;
} XColor;
typedef struct {
    short x, y;
} XPoint;
typedef struct {
    short x, y;
    unsigned short width, height;
    short angle1, angle2;
} XArc;
typedef struct {
        int key_click_percent;
        int bell_percent;
        int bell_pitch;
        int bell_duration;
        int led;
        int led_mode;
        int key;
        int auto_repeat_mode;   
} XKeyboardControl;
typedef struct _XDisplay Display;
typedef union _XEvent {
        int type;		
	XAnyEvent xany;
	XKeyEvent xkey;
	XButtonEvent xbutton;
	XMotionEvent xmotion;
	XCrossingEvent xcrossing;
	XFocusChangeEvent xfocus;
	XExposeEvent xexpose;
	XGraphicsExposeEvent xgraphicsexpose;
	XNoExposeEvent xnoexpose;
	XVisibilityEvent xvisibility;
	XCreateWindowEvent xcreatewindow;
	XDestroyWindowEvent xdestroywindow;
	XUnmapEvent xunmap;
	XMapEvent xmap;
	XMapRequestEvent xmaprequest;
	XReparentEvent xreparent;
	XConfigureEvent xconfigure;
	XGravityEvent xgravity;
	XResizeRequestEvent xresizerequest;
	XConfigureRequestEvent xconfigurerequest;
	XCirculateEvent xcirculate;
	XCirculateRequestEvent xcirculaterequest;
	XPropertyEvent xproperty;
	XSelectionClearEvent xselectionclear;
	XSelectionRequestEvent xselectionrequest;
	XSelectionEvent xselection;
	XColormapEvent xcolormap;
	XClientMessageEvent xclient;
	XMappingEvent xmapping;
	XErrorEvent xerror;
	XKeymapEvent xkeymap;
	XGenericEvent xgeneric;
	XGenericEventCookie xcookie;
	long pad[24];
} XEvent;
typedef struct {		
    unsigned char byte1;
    unsigned char byte2;
} XChar2b;
typedef void (*XIOErrorExitHandler) ( 
    Display*,		
    void*		
);
extern void XSetIOErrorExitHandler (
    Display*,			
    XIOErrorExitHandler,	
    void*			
);
extern XPixmapFormatValues *XListPixmapFormats(
    Display*		,
    int*		
);
extern int *XListDepths(
    Display*		,
    int			,
    int*		
);
extern Status XReconfigureWMWindow(
    Display*		,
    Window		,
    int			,
    unsigned int	,
    XWindowChanges*	
);
extern Status XGetWMProtocols(
    Display*		,
    Window		,
    Atom**		,
    int*		
);
extern Status XSetWMProtocols(
    Display*		,
    Window		,
    Atom*		,
    int			
);
extern Status XIconifyWindow(
    Display*		,
    Window		,
    int			
);
extern Status XWithdrawWindow(
    Display*		,
    Window		,
    int			
);
extern Status XGetCommand(
    Display*		,
    Window		,
    char***		,
    int*		
);
extern Status XGetWMColormapWindows(
    Display*		,
    Window		,
    Window**		,
    int*		
);
extern Status XSetWMColormapWindows(
    Display*		,
    Window		,
    Window*		,
    int			
);
extern void XFreeStringList(
    char**		
);
extern int XSetTransientForHint(
    Display*		,
    Window		,
    Window		
);
extern int XActivateScreenSaver(
    Display*		
);
extern int XAddHost(
    Display*		,
    XHostAddress*	
);
extern int XAddHosts(
    Display*		,
    XHostAddress*	,
    int			
);
extern int XAddToExtensionList(
    struct _XExtData**	,
    XExtData*		
);
extern int XAddToSaveSet(
    Display*		,
    Window		
);
extern Status XAllocColor(
    Display*		,
    Colormap		,
    XColor*		
);
extern Status XAllocColorCells(
    Display*		,
    Colormap		,
    Bool	        ,
    unsigned long*	,
    unsigned int	,
    unsigned long*	,
    unsigned int 	
);
extern Status XAllocColorPlanes(
    Display*		,
    Colormap		,
    Bool		,
    unsigned long*	,
    int			,
    int			,
    int			,
    int			,
    unsigned long*	,
    unsigned long*	,
    unsigned long*	
);
extern Status XAllocNamedColor(
    Display*		,
    Colormap		,
     char*	,
    XColor*		,
    XColor*		
);
extern int XAllowEvents(
    Display*		,
    int			,
    Time		
);
extern int XAutoRepeatOff(
    Display*		
);
extern int XAutoRepeatOn(
    Display*		
);
extern int XBell(
    Display*		,
    int			
);
extern int XBitmapBitOrder(
    Display*		
);
extern int XBitmapPad(
    Display*		
);
extern int XBitmapUnit(
    Display*		
);
extern int XCellsOfScreen(
    Screen*		
);
extern int XChangeActivePointerGrab(
    Display*		,
    unsigned int	,
    Cursor		,
    Time		
);
extern int XChangeGC(
    Display*		,
    GC			,
    unsigned long	,
    XGCValues*		
);
extern int XChangeKeyboardControl(
    Display*		,
    unsigned long	,
    XKeyboardControl*	
);
extern int XChangeKeyboardMapping(
    Display*		,
    int			,
    int			,
    KeySym*		,
    int			
);
extern int XChangePointerControl(
    Display*		,
    Bool		,
    Bool		,
    int			,
    int			,
    int			
);
extern int XChangeProperty(
    Display*		,
    Window		,
    Atom		,
    Atom		,
    int			,
    int			,
     unsigned char*	,
    int			
);
extern int XChangeSaveSet(
    Display*		,
    Window		,
    int			
);
extern int XChangeWindowAttributes(
    Display*		,
    Window		,
    unsigned long	,
    XSetWindowAttributes* 
);
extern Bool XCheckIfEvent(
    Display*		,
    XEvent*		,
    Bool (*) (
	       Display*			,
               XEvent*			,
               XPointer			
             )		,
    XPointer		
);
extern Bool XCheckMaskEvent(
    Display*		,
    long		,
    XEvent*		
);
extern Bool XCheckTypedEvent(
    Display*		,
    int			,
    XEvent*		
);
extern Bool XCheckTypedWindowEvent(
    Display*		,
    Window		,
    int			,
    XEvent*		
);
extern Bool XCheckWindowEvent(
    Display*		,
    Window		,
    long		,
    XEvent*		
);
extern int XCirculateSubwindows(
    Display*		,
    Window		,
    int			
);
extern int XCirculateSubwindowsDown(
    Display*		,
    Window		
);
extern int XCirculateSubwindowsUp(
    Display*		,
    Window		
);
extern int XClearArea(
    Display*		,
    Window		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    Bool		
);
extern int XClearWindow(
    Display*		,
    Window		
);
extern int XCloseDisplay(
    Display*		
);
extern int XConfigureWindow(
    Display*		,
    Window		,
    unsigned int	,
    XWindowChanges*	
);
extern int XConnectionNumber(
    Display*		
);
extern int XConvertSelection(
    Display*		,
    Atom		,
    Atom 		,
    Atom		,
    Window		,
    Time		
);
extern int XCopyArea(
    Display*		,
    Drawable		,
    Drawable		,
    GC			,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    int			,
    int			
);
extern int XCopyGC(
    Display*		,
    GC			,
    unsigned long	,
    GC			
);
extern int XCopyPlane(
    Display*		,
    Drawable		,
    Drawable		,
    GC			,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    int			,
    int			,
    unsigned long	
);
extern int XDefaultDepth(
    Display*		,
    int			
);
extern int XDefaultDepthOfScreen(
    Screen*		
);
extern int XDefaultScreen(
    Display*		
);
extern int XDefineCursor(
    Display*		,
    Window		,
    Cursor		
);
extern int XDeleteProperty(
    Display*		,
    Window		,
    Atom		
);
extern int XDestroyWindow(
    Display*		,
    Window		
);
extern int XDestroySubwindows(
    Display*		,
    Window		
);
extern int XDoesBackingStore(
    Screen*		
);
extern Bool XDoesSaveUnders(
    Screen*		
);
extern int XDisableAccessControl(
    Display*		
);
extern int XDisplayCells(
    Display*		,
    int			
);
extern int XDisplayHeight(
    Display*		,
    int			
);
extern int XDisplayHeightMM(
    Display*		,
    int			
);
extern int XDisplayKeycodes(
    Display*		,
    int*		,
    int*		
);
extern int XDisplayPlanes(
    Display*		,
    int			
);
extern int XDisplayWidth(
    Display*		,
    int			
);
extern int XDisplayWidthMM(
    Display*		,
    int			
);
extern int XDrawArc(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    int			,
    int			
);
extern int XDrawArcs(
    Display*		,
    Drawable		,
    GC			,
    XArc*		,
    int			
);
extern int XDrawImageString(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			,
     char*	,
    int			
);
extern int XDrawImageString16(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			,
     XChar2b*	,
    int			
);
extern int XDrawLine(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			,
    int			,
    int			
);
extern int XDrawLines(
    Display*		,
    Drawable		,
    GC			,
    XPoint*		,
    int			,
    int			
);
extern int XDrawPoint(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			
);