Motif_Athena_Package/include_C/Xlib.pp


procedure XSetIOErrorExitHandler(para1:PDisplay; para2:TXIOErrorExitHandler; para3:pointer);cdecl;external;
{ display  }{ count_return  }
function XListPixmapFormats(para1:PDisplay; para2:Plongint):PXPixmapFormatValues;cdecl;external;
{ display  }{ screen_number  }{ count_return  }
function XListDepths(para1:PDisplay; para2:longint; para3:Plongint):Plongint;cdecl;external;
{ ICCCM routines for things that don't require special include files;  }
{ other declarations are given in Xutil.h                              }
{ display  }{ w  }{ screen_number  }{ mask  }{ changes  }
function XReconfigureWMWindow(para1:PDisplay; para2:TWindow; para3:longint; para4:dword; para5:PXWindowChanges):TStatus;cdecl;external;
{ display  }{ w  }{ protocols_return  }{ count_return  }
function XGetWMProtocols(para1:PDisplay; para2:TWindow; para3:PPAtom; para4:Plongint):TStatus;cdecl;external;
{ display  }{ w  }{ protocols  }{ count  }
function XSetWMProtocols(para1:PDisplay; para2:TWindow; para3:PAtom; para4:longint):TStatus;cdecl;external;
{ display  }{ w  }{ screen_number  }
function XIconifyWindow(para1:PDisplay; para2:TWindow; para3:longint):TStatus;cdecl;external;
{ display  }{ w  }{ screen_number  }
function XWithdrawWindow(para1:PDisplay; para2:TWindow; para3:longint):TStatus;cdecl;external;
{ display  }{ w  }{ argv_return  }{ argc_return  }
function XGetCommand(para1:PDisplay; para2:TWindow; para3:PPPchar; para4:Plongint):TStatus;cdecl;external;
{ display  }{ w  }{ windows_return  }{ count_return  }
function XGetWMColormapWindows(para1:PDisplay; para2:TWindow; para3:PPWindow; para4:Plongint):TStatus;cdecl;external;
{ display  }{ w  }{ colormap_windows  }{ count  }
function XSetWMColormapWindows(para1:PDisplay; para2:TWindow; para3:PWindow; para4:longint):TStatus;cdecl;external;
{ list  }
procedure XFreeStringList(para1:PPchar);cdecl;external;
{ display  }{ w  }{ prop_window  }
function XSetTransientForHint(para1:PDisplay; para2:TWindow; para3:TWindow):longint;cdecl;external;
{ The following are given in alphabetical order  }
{ display  }
function XActivateScreenSaver(para1:PDisplay):longint;cdecl;external;
{ display  }{ host  }
function XAddHost(para1:PDisplay; para2:PXHostAddress):longint;cdecl;external;
{ display  }{ hosts  }{ num_hosts  }
function XAddHosts(para1:PDisplay; para2:PXHostAddress; para3:longint):longint;cdecl;external;
{ structure  }{ ext_data  }
function XAddToExtensionList(para1:PPXExtData; para2:PXExtData):longint;cdecl;external;
{ display  }{ w  }
function XAddToSaveSet(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ colormap  }{ screen_in_out  }
function XAllocColor(para1:PDisplay; para2:TColormap; para3:PXColor):TStatus;cdecl;external;
{ display  }{ colormap  }{ contig  }{ plane_masks_return  }{ nplanes  }{ pixels_return  }{ npixels  }
function XAllocColorCells(para1:PDisplay; para2:TColormap; para3:TBool; para4:Pdword; para5:dword; 
           para6:Pdword; para7:dword):TStatus;cdecl;external;
{ display  }{ colormap  }{ contig  }{ pixels_return  }{ ncolors  }{ nreds  }{ ngreens  }{ nblues  }{ rmask_return  }{ gmask_return  }{ bmask_return  }
function XAllocColorPlanes(para1:PDisplay; para2:TColormap; para3:TBool; para4:Pdword; para5:longint; 
           para6:longint; para7:longint; para8:longint; para9:Pdword; para10:Pdword; 
           para11:Pdword):TStatus;cdecl;external;
{ display  }{ colormap  }{ color_name  }{ screen_def_return  }{ exact_def_return  }
function XAllocNamedColor(para1:PDisplay; para2:TColormap; para3:Pchar; para4:PXColor; para5:PXColor):TStatus;cdecl;external;
{ display  }{ event_mode  }{ time  }
function XAllowEvents(para1:PDisplay; para2:longint; para3:TTime):longint;cdecl;external;
{ display  }
function XAutoRepeatOff(para1:PDisplay):longint;cdecl;external;
{ display  }
function XAutoRepeatOn(para1:PDisplay):longint;cdecl;external;
{ display  }{ percent  }
function XBell(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }
function XBitmapBitOrder(para1:PDisplay):longint;cdecl;external;
{ display  }
function XBitmapPad(para1:PDisplay):longint;cdecl;external;
{ display  }
function XBitmapUnit(para1:PDisplay):longint;cdecl;external;
{ screen  }
function XCellsOfScreen(para1:PScreen):longint;cdecl;external;
{ display  }{ event_mask  }{ cursor  }{ time  }
function XChangeActivePointerGrab(para1:PDisplay; para2:dword; para3:TCursor; para4:TTime):longint;cdecl;external;
{ display  }{ gc  }{ valuemask  }{ values  }
function XChangeGC(para1:PDisplay; para2:TGC; para3:dword; para4:PXGCValues):longint;cdecl;external;
{ display  }{ value_mask  }{ values  }
function XChangeKeyboardControl(para1:PDisplay; para2:dword; para3:PXKeyboardControl):longint;cdecl;external;
{ display  }{ first_keycode  }{ keysyms_per_keycode  }{ keysyms  }{ num_codes  }
function XChangeKeyboardMapping(para1:PDisplay; para2:longint; para3:longint; para4:PKeySym; para5:longint):longint;cdecl;external;
{ display  }{ do_accel  }{ do_threshold  }{ accel_numerator  }{ accel_denominator  }{ threshold  }
function XChangePointerControl(para1:PDisplay; para2:TBool; para3:TBool; para4:longint; para5:longint; 
           para6:longint):longint;cdecl;external;
{ display  }{ w  }{ property  }{ type  }{ format  }{ mode  }{ data  }{ nelements  }
function XChangeProperty(para1:PDisplay; para2:TWindow; para3:TAtom; para4:TAtom; para5:longint; 
           para6:longint; para7:Pbyte; para8:longint):longint;cdecl;external;
{ display  }{ w  }{ change_mode  }
function XChangeSaveSet(para1:PDisplay; para2:TWindow; para3:longint):longint;cdecl;external;
{ display  }{ w  }{ valuemask  }{ attributes  }
function XChangeWindowAttributes(para1:PDisplay; para2:TWindow; para3:dword; para4:PXSetWindowAttributes):longint;cdecl;external;
{ display  }{ event_return  }{ display  }{ event  }{ arg  }
{ predicate  }{ arg  }
function XCheckIfEvent(para1:PDisplay; para2:PXEvent; para3:function (para1:PDisplay; para2:PXEvent; para3:TXPointer):TBool; para4:TXPointer):TBool;cdecl;external;
{ display  }{ event_mask  }{ event_return  }
function XCheckMaskEvent(para1:PDisplay; para2:longint; para3:PXEvent):TBool;cdecl;external;
{ display  }{ event_type  }{ event_return  }
function XCheckTypedEvent(para1:PDisplay; para2:longint; para3:PXEvent):TBool;cdecl;external;
{ display  }{ w  }{ event_type  }{ event_return  }
function XCheckTypedWindowEvent(para1:PDisplay; para2:TWindow; para3:longint; para4:PXEvent):TBool;cdecl;external;
{ display  }{ w  }{ event_mask  }{ event_return  }
function XCheckWindowEvent(para1:PDisplay; para2:TWindow; para3:longint; para4:PXEvent):TBool;cdecl;external;
{ display  }{ w  }{ direction  }
function XCirculateSubwindows(para1:PDisplay; para2:TWindow; para3:longint):longint;cdecl;external;
{ display  }{ w  }
function XCirculateSubwindowsDown(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ w  }
function XCirculateSubwindowsUp(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ w  }{ x  }{ y  }{ width  }{ height  }{ exposures  }
function XClearArea(para1:PDisplay; para2:TWindow; para3:longint; para4:longint; para5:dword; 
           para6:dword; para7:TBool):longint;cdecl;external;
{ display  }{ w  }
function XClearWindow(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }
function XCloseDisplay(para1:PDisplay):longint;cdecl;external;
{ display  }{ w  }{ value_mask  }{ values  }
function XConfigureWindow(para1:PDisplay; para2:TWindow; para3:dword; para4:PXWindowChanges):longint;cdecl;external;
{ display  }
function XConnectionNumber(para1:PDisplay):longint;cdecl;external;
{ display  }{ selection  }{ target  }{ property  }{ requestor  }{ time  }
function XConvertSelection(para1:PDisplay; para2:TAtom; para3:TAtom; para4:TAtom; para5:TWindow; 
           para6:TTime):longint;cdecl;external;
{ display  }{ src  }{ dest  }{ gc  }{ src_x  }{ src_y  }{ width  }{ height  }{ dest_x  }{ dest_y  }
function XCopyArea(para1:PDisplay; para2:TDrawable; para3:TDrawable; para4:TGC; para5:longint; 
           para6:longint; para7:dword; para8:dword; para9:longint; para10:longint):longint;cdecl;external;
{ display  }{ src  }{ valuemask  }{ dest  }
function XCopyGC(para1:PDisplay; para2:TGC; para3:dword; para4:TGC):longint;cdecl;external;
{ display  }{ src  }{ dest  }{ gc  }{ src_x  }{ src_y  }{ width  }{ height  }{ dest_x  }{ dest_y  }{ plane  }
function XCopyPlane(para1:PDisplay; para2:TDrawable; para3:TDrawable; para4:TGC; para5:longint; 
           para6:longint; para7:dword; para8:dword; para9:longint; para10:longint; 
           para11:dword):longint;cdecl;external;
{ display  }{ screen_number  }
function XDefaultDepth(para1:PDisplay; para2:longint):longint;cdecl;external;
{ screen  }
function XDefaultDepthOfScreen(para1:PScreen):longint;cdecl;external;
{ display  }
function XDefaultScreen(para1:PDisplay):longint;cdecl;external;
{ display  }{ w  }{ cursor  }
function XDefineCursor(para1:PDisplay; para2:TWindow; para3:TCursor):longint;cdecl;external;
{ display  }{ w  }{ property  }
function XDeleteProperty(para1:PDisplay; para2:TWindow; para3:TAtom):longint;cdecl;external;
{ display  }{ w  }
function XDestroyWindow(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ w  }
function XDestroySubwindows(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ screen  }
function XDoesBackingStore(para1:PScreen):longint;cdecl;external;
{ screen  }
function XDoesSaveUnders(para1:PScreen):TBool;cdecl;external;
{ display  }
function XDisableAccessControl(para1:PDisplay):longint;cdecl;external;
{ display  }{ screen_number  }
function XDisplayCells(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ screen_number  }
function XDisplayHeight(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ screen_number  }
function XDisplayHeightMM(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ min_keycodes_return  }{ max_keycodes_return  }
function XDisplayKeycodes(para1:PDisplay; para2:Plongint; para3:Plongint):longint;cdecl;external;
{ display  }{ screen_number  }
function XDisplayPlanes(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ screen_number  }
function XDisplayWidth(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ screen_number  }
function XDisplayWidthMM(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ x  }{ y  }{ width  }{ height  }{ angle1  }{ angle2  }
function XDrawArc(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint; 
           para6:dword; para7:dword; para8:longint; para9:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ arcs  }{ narcs  }
function XDrawArcs(para1:PDisplay; para2:TDrawable; para3:TGC; para4:PXArc; para5:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ x  }{ y  }{ string  }{ length  }
function XDrawImageString(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint; 
           para6:Pchar; para7:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ x  }{ y  }{ string  }{ length  }
function XDrawImageString16(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint; 
           para6:PXChar2b; para7:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ x1  }{ y1  }{ x2  }{ y2  }
function XDrawLine(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint; 
           para6:longint; para7:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ points  }{ npoints  }{ mode  }
function XDrawLines(para1:PDisplay; para2:TDrawable; para3:TGC; para4:PXPoint; para5:longint; 
           para6:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ x  }{ y  }
function XDrawPoint(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ points  }{ npoints  }{ mode  }
